y.output
Terminals unused in grammar

   OR


State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog_start $end

    1 prog_start: %empty
    2           | Function prog_start

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    4 Declaration_loop: Declaration SEMICOLON Declaration_loop
    5                 | %empty

    6 Declaration: Ident_loop COLON INTEGER
    7            | Ident_loop COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    8 Ident_loop: Ident
    9           | Ident COMMA Ident_loop

   10 Statement: Statement1
   11          | Statement2
   12          | Statement3
   13          | Statement4
   14          | Statement5
   15          | Statement6
   16          | Statement7
   17          | Statement8
   18          | Statement9

   19 Statement1: Var ASSIGN Expression

   20 Statement2: IF Bool-Expr THEN Statement_loop ElseStatement ENDIF

   21 Statement3: WHILE Bool-Expr BEGINLOOP Statement_loop SEMICOLON ENDLOOP

   22 Statement4: DO BEGINLOOP Statement_loop SEMICOLON ENDLOOP WHILE Bool-Expr

   23 Statement5: FOR Var ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statement_loop SEMICOLON ENDLOOP

   24 Statement6: READ Var_loop

   25 Statement7: WRITE Var_loop

   26 Statement8: CONTINUE

   27 Statement9: RETURN Expression

   28 Statement_loop: Statement SEMICOLON Statement_loop
   29               | Statement SEMICOLON

   30 ElseStatement: ELSE Statement_loop
   31              | %empty

   32 Bool-Expr: Relation-And-Expr

   33 Relation-And-Expr: Relation-Expr
   34                  | Relation-Expr AND Relation-And-Expr

   35 Relation-Expr: NOT Relation-Expr_loop
   36              | Relation-Expr_loop

   37 Relation-Expr_loop: Expression Comp Expression
   38                   | TRUE
   39                   | FALSE
   40                   | L_PAREN Bool-Expr R_PAREN

   41 Comp: EQ
   42     | NEQ
   43     | LT
   44     | GT
   45     | LTE
   46     | GTE

   47 Expression: Multiplicative-Expr
   48           | Multiplicative-Expr SUB Expression
   49           | Multiplicative-Expr ADD Expression

   50 Expression_loop: Expression COMMA Expression_loop
   51                | Expression
   52                | %empty

   53 Multiplicative-Expr: Term
   54                    | MOD Term Multiplicative-Expr
   55                    | DIV Term Multiplicative-Expr
   56                    | MULT Term Multiplicative-Expr

   57 Term: Var
   58     | NUMBER
   59     | SUB Var
   60     | SUB NUMBER
   61     | L_PAREN Expression R_PAREN
   62     | SUB L_PAREN Expression R_PAREN
   63     | Ident L_PAREN Expression_loop R_PAREN

   64 Var: Ident
   65    | Ident L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

   66 Var_loop: Var
   67         | Var COMMA Var_loop

   68 Ident: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENT (258) 68
NUMBER (259) 7 23 58 60
FUNCTION (260) 3
BEGIN_PARAMS (261) 3
END_PARAMS (262) 3
BEGIN_LOCALS (263) 3
END_LOCALS (264) 3
BEGIN_BODY (265) 3
END_BODY (266) 3
INTEGER (267) 6 7
ARRAY (268) 7
OF (269) 7
IF (270) 20
THEN (271) 20
ENDIF (272) 20
ELSE (273) 30
WHILE (274) 21 22
DO (275) 22
FOR (276) 23
BEGINLOOP (277) 21 22 23
ENDLOOP (278) 21 22 23
CONTINUE (279) 26
READ (280) 24
WRITE (281) 25
TRUE (282) 38
FALSE (283) 39
RETURN (284) 27
SEMICOLON (285) 3 4 21 22 23 28 29
COLON (286) 6 7
COMMA (287) 9 50 67
L_PAREN (288) 40 61 62 63
R_PAREN (289) 40 61 62 63
L_SQUARE_BRACKET (290) 7 65
R_SQUARE_BRACKET (291) 7 65
AND (292) 34
OR (293)
SUB (294) 48 59 60 62
ADD (295) 49
MULT (296) 56
DIV (297) 55
MOD (298) 54
EQ (299) 41
NEQ (300) 42
LT (301) 43
GT (302) 44
LTE (303) 45
GTE (304) 46
ASSIGN (305) 19 23
NOT (306) 35


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prog_start (53)
    on left: 1 2, on right: 0 2
Function (54)
    on left: 3, on right: 2
Declaration_loop (55)
    on left: 4 5, on right: 3 4
Declaration (56)
    on left: 6 7, on right: 4
Ident_loop (57)
    on left: 8 9, on right: 6 7 9
Statement (58)
    on left: 10 11 12 13 14 15 16 17 18, on right: 28 29
Statement1 (59)
    on left: 19, on right: 10
Statement2 (60)
    on left: 20, on right: 11
Statement3 (61)
    on left: 21, on right: 12
Statement4 (62)
    on left: 22, on right: 13
Statement5 (63)
    on left: 23, on right: 14
Statement6 (64)
    on left: 24, on right: 15
Statement7 (65)
    on left: 25, on right: 16
Statement8 (66)
    on left: 26, on right: 17
Statement9 (67)
    on left: 27, on right: 18
Statement_loop (68)
    on left: 28 29, on right: 3 20 21 22 23 28 30
ElseStatement (69)
    on left: 30 31, on right: 20
Bool-Expr (70)
    on left: 32, on right: 20 21 22 23 40
Relation-And-Expr (71)
    on left: 33 34, on right: 32 34
Relation-Expr (72)
    on left: 35 36, on right: 33 34
Relation-Expr_loop (73)
    on left: 37 38 39 40, on right: 35 36
Comp (74)
    on left: 41 42 43 44 45 46, on right: 37
Expression (75)
    on left: 47 48 49, on right: 19 23 27 37 48 49 50 51 61 62 65
Expression_loop (76)
    on left: 50 51 52, on right: 50 63
Multiplicative-Expr (77)
    on left: 53 54 55 56, on right: 47 48 49 54 55 56
Term (78)
    on left: 57 58 59 60 61 62 63, on right: 53 54 55 56
Var (79)
    on left: 64 65, on right: 19 23 57 59 66 67
Var_loop (80)
    on left: 66 67, on right: 24 25 67
Ident (81)
    on left: 68, on right: 3 8 9 63 64 65


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (prog_start)

    prog_start  go to state 2
    Function    go to state 3


State 1

    3 Function: FUNCTION . Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    IDENT  shift, and go to state 4

    Ident  go to state 5


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 6


State 3

    2 prog_start: Function . prog_start

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (prog_start)

    prog_start  go to state 7
    Function    go to state 3


State 4

   68 Ident: IDENT .

    $default  reduce using rule 68 (Ident)


State 5

    3 Function: FUNCTION Ident . SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: prog_start $end .

    $default  accept


State 7

    2 prog_start: Function prog_start .

    $default  reduce using rule 2 (prog_start)


State 8

    3 Function: FUNCTION Ident SEMICOLON . BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 9

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS . Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration_loop)

    Declaration_loop  go to state 10
    Declaration       go to state 11
    Ident_loop        go to state 12
    Ident             go to state 13


State 10

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop . SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 14


State 11

    4 Declaration_loop: Declaration . SEMICOLON Declaration_loop

    SEMICOLON  shift, and go to state 15


State 12

    6 Declaration: Ident_loop . COLON INTEGER
    7            | Ident_loop . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 16


State 13

    8 Ident_loop: Ident .
    9           | Ident . COMMA Ident_loop

    COMMA  shift, and go to state 17

    $default  reduce using rule 8 (Ident_loop)


State 14

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON . END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    END_PARAMS  shift, and go to state 18


State 15

    4 Declaration_loop: Declaration SEMICOLON . Declaration_loop

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration_loop)

    Declaration_loop  go to state 19
    Declaration       go to state 11
    Ident_loop        go to state 12
    Ident             go to state 13


State 16

    6 Declaration: Ident_loop COLON . INTEGER
    7            | Ident_loop COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 20
    ARRAY    shift, and go to state 21


State 17

    9 Ident_loop: Ident COMMA . Ident_loop

    IDENT  shift, and go to state 4

    Ident_loop  go to state 22
    Ident       go to state 13


State 18

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS . BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    BEGIN_LOCALS  shift, and go to state 23


State 19

    4 Declaration_loop: Declaration SEMICOLON Declaration_loop .

    $default  reduce using rule 4 (Declaration_loop)


State 20

    6 Declaration: Ident_loop COLON INTEGER .

    $default  reduce using rule 6 (Declaration)


State 21

    7 Declaration: Ident_loop COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 24


State 22

    9 Ident_loop: Ident COMMA Ident_loop .

    $default  reduce using rule 9 (Ident_loop)


State 23

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS . Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration_loop)

    Declaration_loop  go to state 25
    Declaration       go to state 11
    Ident_loop        go to state 12
    Ident             go to state 13


State 24

    7 Declaration: Ident_loop COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 26


State 25

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop . SEMICOLON END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 27


State 26

    7 Declaration: Ident_loop COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 28


State 27

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON . END_LOCALS BEGIN_BODY Statement_loop SEMICOLON END_BODY

    END_LOCALS  shift, and go to state 29


State 28

    7 Declaration: Ident_loop COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 30


State 29

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS . BEGIN_BODY Statement_loop SEMICOLON END_BODY

    BEGIN_BODY  shift, and go to state 31


State 30

    7 Declaration: Ident_loop COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 32


State 31

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY . Statement_loop SEMICOLON END_BODY

    IDENT     shift, and go to state 4
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOR       shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    Statement       go to state 41
    Statement1      go to state 42
    Statement2      go to state 43
    Statement3      go to state 44
    Statement4      go to state 45
    Statement5      go to state 46
    Statement6      go to state 47
    Statement7      go to state 48
    Statement8      go to state 49
    Statement9      go to state 50
    Statement_loop  go to state 51
    Var             go to state 52
    Ident           go to state 53


State 32

    7 Declaration: Ident_loop COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 7 (Declaration)


State 33

   20 Statement2: IF . Bool-Expr THEN Statement_loop ElseStatement ENDIF

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    L_PAREN  shift, and go to state 57
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61
    NOT      shift, and go to state 62

    Bool-Expr            go to state 63
    Relation-And-Expr    go to state 64
    Relation-Expr        go to state 65
    Relation-Expr_loop   go to state 66
    Expression           go to state 67
    Multiplicative-Expr  go to state 68
    Term                 go to state 69
    Var                  go to state 70
    Ident                go to state 71


State 34

   21 Statement3: WHILE . Bool-Expr BEGINLOOP Statement_loop SEMICOLON ENDLOOP

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    L_PAREN  shift, and go to state 57
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61
    NOT      shift, and go to state 62

    Bool-Expr            go to state 72
    Relation-And-Expr    go to state 64
    Relation-Expr        go to state 65
    Relation-Expr_loop   go to state 66
    Expression           go to state 67
    Multiplicative-Expr  go to state 68
    Term                 go to state 69
    Var                  go to state 70
    Ident                go to state 71


State 35

   22 Statement4: DO . BEGINLOOP Statement_loop SEMICOLON ENDLOOP WHILE Bool-Expr

    BEGINLOOP  shift, and go to state 73


State 36

   23 Statement5: FOR . Var ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statement_loop SEMICOLON ENDLOOP

    IDENT  shift, and go to state 4

    Var    go to state 74
    Ident  go to state 53


State 37

   26 Statement8: CONTINUE .

    $default  reduce using rule 26 (Statement8)


State 38

   24 Statement6: READ . Var_loop

    IDENT  shift, and go to state 4

    Var       go to state 75
    Var_loop  go to state 76
    Ident     go to state 53


State 39

   25 Statement7: WRITE . Var_loop

    IDENT  shift, and go to state 4

    Var       go to state 75
    Var_loop  go to state 77
    Ident     go to state 53


State 40

   27 Statement9: RETURN . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    L_PAREN  shift, and go to state 78
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61

    Expression           go to state 79
    Multiplicative-Expr  go to state 68
    Term                 go to state 69
    Var                  go to state 70
    Ident                go to state 71


State 41

   28 Statement_loop: Statement . SEMICOLON Statement_loop
   29               | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 42

   10 Statement: Statement1 .

    $default  reduce using rule 10 (Statement)


State 43

   11 Statement: Statement2 .

    $default  reduce using rule 11 (Statement)


State 44

   12 Statement: Statement3 .

    $default  reduce using rule 12 (Statement)


State 45

   13 Statement: Statement4 .

    $default  reduce using rule 13 (Statement)


State 46

   14 Statement: Statement5 .

    $default  reduce using rule 14 (Statement)


State 47

   15 Statement: Statement6 .

    $default  reduce using rule 15 (Statement)


State 48

   16 Statement: Statement7 .

    $default  reduce using rule 16 (Statement)


State 49

   17 Statement: Statement8 .

    $default  reduce using rule 17 (Statement)


State 50

   18 Statement: Statement9 .

    $default  reduce using rule 18 (Statement)


State 51

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declaration_loop SEMICOLON END_PARAMS BEGIN_LOCALS Declaration_loop SEMICOLON END_LOCALS BEGIN_BODY Statement_loop . SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 81


State 52

   19 Statement1: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 82


State 53

   64 Var: Ident .
   65    | Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 83

    $default  reduce using rule 64 (Var)


State 54

   58 Term: NUMBER .

    $default  reduce using rule 58 (Term)


State 55

   38 Relation-Expr_loop: TRUE .

    $default  reduce using rule 38 (Relation-Expr_loop)


State 56

   39 Relation-Expr_loop: FALSE .

    $default  reduce using rule 39 (Relation-Expr_loop)


State 57

   40 Relation-Expr_loop: L_PAREN . Bool-Expr R_PAREN
   61 Term: L_PAREN . Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    L_PAREN  shift, and go to state 57
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61
    NOT      shift, and go to state 62

    Bool-Expr            go to state 84
    Relation-And-Expr    go to state 64
    Relation-Expr        go to state 65
    Relation-Expr_loop   go to state 66
    Expression           go to state 85
    Multiplicative-Expr  go to state 68
    Term                 go to state 69
    Var                  go to state 70
    Ident                go to state 71


State 58

   59 Term: SUB . Var
   60     | SUB . NUMBER
   62     | SUB . L_PAREN Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 86
    L_PAREN  shift, and go to state 87

    Var    go to state 88
    Ident  go to state 53


State 59

   56 Multiplicative-Expr: MULT . Term Multiplicative-Expr

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    L_PAREN  shift, and go to state 78
    SUB      shift, and go to state 58

    Term   go to state 89
    Var    go to state 70
    Ident  go to state 71


State 60

   55 Multiplicative-Expr: DIV . Term Multiplicative-Expr

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    L_PAREN  shift, and go to state 78
    SUB      shift, and go to state 58

    Term   go to state 90
    Var    go to state 70
    Ident  go to state 71


State 61

   54 Multiplicative-Expr: MOD . Term Multiplicative-Expr

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    L_PAREN  shift, and go to state 78
    SUB      shift, and go to state 58

    Term   go to state 91
    Var    go to state 70
    Ident  go to state 71


State 62

   35 Relation-Expr: NOT . Relation-Expr_loop

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    L_PAREN  shift, and go to state 57
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61

    Relation-Expr_loop   go to state 92
    Expression           go to state 67
    Multiplicative-Expr  go to state 68
    Term                 go to state 69
    Var                  go to state 70
    Ident                go to state 71


State 63

   20 Statement2: IF Bool-Expr . THEN Statement_loop ElseStatement ENDIF

    THEN  shift, and go to state 93


State 64

   32 Bool-Expr: Relation-And-Expr .

    $default  reduce using rule 32 (Bool-Expr)


State 65

   33 Relation-And-Expr: Relation-Expr .
   34                  | Relation-Expr . AND Relation-And-Expr

    AND  shift, and go to state 94

    $default  reduce using rule 33 (Relation-And-Expr)


State 66

   36 Relation-Expr: Relation-Expr_loop .

    $default  reduce using rule 36 (Relation-Expr)


State 67

   37 Relation-Expr_loop: Expression . Comp Expression

    EQ   shift, and go to state 95
    NEQ  shift, and go to state 96
    LT   shift, and go to state 97
    GT   shift, and go to state 98
    LTE  shift, and go to state 99
    GTE  shift, and go to state 100

    Comp  go to state 101


State 68

   47 Expression: Multiplicative-Expr .
   48           | Multiplicative-Expr . SUB Expression
   49           | Multiplicative-Expr . ADD Expression

    SUB  shift, and go to state 102
    ADD  shift, and go to state 103

    $default  reduce using rule 47 (Expression)


State 69

   53 Multiplicative-Expr: Term .

    $default  reduce using rule 53 (Multiplicative-Expr)


State 70

   57 Term: Var .

    $default  reduce using rule 57 (Term)


State 71

   63 Term: Ident . L_PAREN Expression_loop R_PAREN
   64 Var: Ident .
   65    | Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 104
    L_SQUARE_BRACKET  shift, and go to state 83

    L_PAREN   [reduce using rule 64 (Var)]
    $default  reduce using rule 64 (Var)


State 72

   21 Statement3: WHILE Bool-Expr . BEGINLOOP Statement_loop SEMICOLON ENDLOOP

    BEGINLOOP  shift, and go to state 105


State 73

   22 Statement4: DO BEGINLOOP . Statement_loop SEMICOLON ENDLOOP WHILE Bool-Expr

    IDENT     shift, and go to state 4
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOR       shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    Statement       go to state 41
    Statement1      go to state 42
    Statement2      go to state 43
    Statement3      go to state 44
    Statement4      go to state 45
    Statement5      go to state 46
    Statement6      go to state 47
    Statement7      go to state 48
    Statement8      go to state 49
    Statement9      go to state 50
    Statement_loop  go to state 106
    Var             go to state 52
    Ident           go to state 53


State 74

   23 Statement5: FOR Var . ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statement_loop SEMICOLON ENDLOOP

    ASSIGN  shift, and go to state 107


State 75

   66 Var_loop: Var .
   67         | Var . COMMA Var_loop

    COMMA  shift, and go to state 108

    $default  reduce using rule 66 (Var_loop)


State 76

   24 Statement6: READ Var_loop .

    $default  reduce using rule 24 (Statement6)


State 77

   25 Statement7: WRITE Var_loop .

    $default  reduce using rule 25 (Statement7)


State 78

   61 Term: L_PAREN . Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 54
    L_PAREN  shift, and go to state 78
    SUB      shift, and go to state 58
    MULT     shift, and go to state 59
    DIV      shift, and go to state 60
    MOD      shift, and go to state 61
